# s5

./: .gitignore  CMakeLists.txt  README.md
board/: s5.kicad_prl  s5.kicad_pro
hw/: HANRUN_HR911130A.kicad_mod  HR911130A.kicad_sym  KSZ9477STXI.kicad_sym  LPJG0926HENL.kicad_sym  LPJG0926HENL.step  README.md  T113S3_PINMAP.md  empty.kicad_wks  fp-lib-table  netlistscript  netlistscript_sklib.py  s5.kicad_pcb  s5.kicad_prl  s5.kicad_pro
hw/chips.pretty/: QFP40P1600X1600X120-129N.kicad_mod  eLQFP-128-1EP_14x14mm_P0.4mm.kicad_mod
hw/connectors.pretty/: HANRUN_HR911130A.kicad_mod  LPJG0926HENL.kicad_mod  USB_C_GCT_USB4110.kicad_mod
include/einheit/s5/: dsa.h  poe.h  sys.h  util.h
src/: dsa.cc  main.cc  poe.cc  switch_adapter.cc  sys.cc  util.cc
